--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest # The CI-CD pipeline will run on Ubuntu
     steps:
       - name: Checkout code
-        run: git clone https://github.com/HadasZeldin/yalla  # Gets the latest code, in other words it does 'git clone' 
+        run: git clone https://github.com/HadasZeldin/yalla  # Gets the latest code, in other words it does 'git clone'
+        -name: the ls-la command
+        run: 'ls-la'
       - name: Print Hello World
         run: echo "Hello, GitHub Actions!" # This is just the command
