--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
       - name: Checkout code
         run: git clone https://github.com/HadasZeldin/yalla  # Gets the latest code, in other words it does 'git clone'
       - name: the ls-la command
-        run: 'ls-la'
-      - name: Print Hello World
-        run: echo "Hello, GitHub Actions!" # This is just the command
+        run: ls-la
+      - name: ping to google
+        run: ping -c 4 https://www.google.co.uk/
